Fixed RollOpposition mostly

--- a/scss/sheets/_roll-collab-sheet.scss
+++ b/scss/sheets/_roll-collab-sheet.scss
@@ -859,7 +859,7 @@
     border-radius: 30px;
     box-shadow: 25px 25px 15px var(--blades-black-dark-fade);
     border: 3px outset var(--blades-white);
-    background: var(--blades-black);
+    background: var(--blades-black-dark);
     // overflow: hidden;
 
     form {
