--- a/templates/components/roll-collab-opposition.hbs
+++ b/templates/components/roll-collab-opposition.hbs
@@ -1,4 +1,4 @@
-  <div class="roll-sheet-block factors-block roll-opp-factors roll-opp-type-{{@root.rollOpposition.type}} flex-vertical">
+  <div class="roll-sheet-block factors-block roll-opp-factors roll-opp-type-{{@root.rollOpposition.rollOppType}} flex-vertical">
     {{#each factorData}}
     {{#unless isPrimary}}
     {{#if isActive}}
