--- a/templates/roll/partials/roll-collab-action.hbs
+++ b/templates/roll/partials/roll-collab-action.hbs
@@ -24,9 +24,9 @@
 </section>
 
 <section class="sheet-header flex-horizontal">
-  <span class="shadowed source-name source-name-type-{{rollPrimary.type}}" {{#unless rollOpposition}}style="text-align: left; padding-left: 50px;"{{/unless}}>{{rollPrimary.name}}</span>
+  <span class="shadowed source-name source-name-type-{{rollPrimary.rollPrimaryType}}" {{#unless rollOpposition}}style="text-align: left; padding-left: 50px;"{{/unless}}>{{rollPrimary.rollPrimaryName}}</span>
   <span class="shadowed vs">{{#if rollOpposition}}vs.{{else}}&nbsp;{{/if}}</span>
-  <span class="shadowed opp-name {{~#if rollOpposition}} opp-name-type-{{rollOpposition.type}}{{/if}}">{{#if rollOpposition}}{{rollOpposition.name}}{{else}}&nbsp;{{/if}}</span>
+  <span class="shadowed opp-name {{~#if rollOpposition}} opp-name-type-{{rollOpposition.rollOppType}}{{/if}}">{{#if rollOpposition}}{{rollOpposition.rollOppName}}{{else}}&nbsp;{{/if}}</span>
 </section>
 
 <section class="sheet-subheader flex-horizontal">
@@ -44,7 +44,7 @@
 
 <div class="split-root flex-horizontal">
   <div class="roll-sheet-float-block roll-source-bg-img">
-    <img src="{{rollPrimary.img}}" />
+    <img src="{{rollPrimary.rollPrimaryImg}}" />
   </div>
   <div class="roll-sheet-float-block roll-source-bg-overlay">  </div>
   <div class="split-root-left">
@@ -242,7 +242,7 @@
     </section>
   </div>
   <div class="roll-sheet-float-block roll-opp-bg-img">
-    {{#if rollOpposition}}<img src="{{rollOpposition.img}}" />{{/if}}
+    {{#if rollOpposition}}<img src="{{rollOpposition.rollOppImg}}" />{{/if}}
   </div>
   <div class="roll-sheet-float-block roll-opp-bg-overlay">  </div>
   <div class="split-root-right">
