--- a/templates/roll/partials/roll-collab-incarceration-gm.hbs
+++ b/templates/roll/partials/roll-collab-incarceration-gm.hbs
@@ -1,7 +1,7 @@
 <div class="split-root flex-horizontal">
   <div class="split-root-left">
     <section class="sheet-top roll-sheet-block">
-      <h1 class="shadowed roll-type">{{rollType}} Roll: <span class="source-name source-type-{{source.type}}">{{rollPrimary.name}}</span></h1>
+      <h1 class="shadowed roll-type">{{rollType}} Roll: <span class="source-name source-type-{{source.type}}">{{rollPrimary.rollPrimaryName}}</span></h1>
     </section>
     <section class="sheet-main tab-content nav-group flex-vertical">
       <div class="roll-sheet-block rolling-block flex-vertical">
