--- a/scss/sheets/_roll-collab-sheet.scss
+++ b/scss/sheets/_roll-collab-sheet.scss
@@ -1457,6 +1457,7 @@
               width: 100%;
               position: absolute;
               pointer-events: none;
+              margin-top: 20px;
 
               &:not(.inactive-mod-block) {
                 flex-direction: column;
@@ -1477,12 +1478,43 @@
                 width: 100%;
                 border-bottom-left-radius: 30px;
                 border-bottom-right-radius: 30px;
+                overflow: hidden;
+                position: relative;
+
+                .roll-odds-section-container {
+                  height: 500%;
+                  width: 100%;
+                  position: absolute;
+                  z-index: 5;
+
+                  display: flex;
+                  justify-content: stretch;
+                  align-items: stretch;
+                  flex-wrap: nowrap;
+
+                  filter: blur(50px);
+
+                  > * {
+                    flex-grow: 1;
+                    flex-shrink: 1;
+                  }
+
+                }
+              }
+
+              .roll-odds-label-container {
+                position: absolute;
+                top: 0px;
+                left: 0px;
+                width: 100%;
+                height: 100%;
                 text-align: center;
                 line-height: 28px;
                 color: var(--blades-gold-dark);
                 font-family: var(--font-emphasis);
                 font-size: 18px;
                 text-shadow: 1.5px 1.5px 0px var(--blades-black-dark);
+                z-index: 5;
               }
 
               .roll-button {
@@ -1505,6 +1537,7 @@
                 transition: 0.25s;
                 filter: drop-shadow(3px 3px 5px var(--blades-black));
                 opacity: 1;
+                z-index: 5;
 
                 &:hover {
                   scale: 1.2;
