--- a/templates/components/slide-out-controls.hbs
+++ b/templates/components/slide-out-controls.hbs
@@ -7,7 +7,7 @@
       <li><a class="control control-toggledoff {{~#if (test status "==" "ToggledOff")}} control-active{{/if}}" data-id="{{id}}" data-action="gm-set" data-status="ToggledOff"><i class="fa-sharp fa-solid fa-pause"></i></a></li>
       <li><a class="control control-toggledon {{~#if (test status "==" "ToggledOn")}} control-active{{/if}}" data-id="{{id}}" data-action="gm-set" data-status="ToggledOn"><i class="fa-sharp fa-solid fa-play"></i></a></li>
       <li><a class="control control-forcedon {{~#if (test status "==" "ForcedOn")}} control-active{{/if}}" data-id="{{id}}" data-action="gm-set" data-status="ForcedOn"><i class="fa-sharp fa-solid fa-forward-fast"></i></a></li>
-      <li><a class="control control-reset" data-id="{{id}}" data-action="gm-reset" data-status="Reset"><i class="fa-sharp fa-solid fa-rotate-left"></i></a></li>
+      <li><a class="control control-reset" data-id="{{id}}" data-action="gm-set" data-status="Reset"><i class="fa-sharp fa-solid fa-rotate-left"></i></a></li>
     </ul>
   </div>
 </div>
