--- a/templates/roll/partials/roll-collab-action.hbs
+++ b/templates/roll/partials/roll-collab-action.hbs
@@ -285,9 +285,15 @@
     {{/if}}
   </div>
     <div class="roll-sheet-float-block roll-button">
-      <div class="roll-odds-strip" style="background: {{{oddsGradient}}};">
-        {{#unless isGMReady}}Waiting For GM ...{{/unless}}
+      <div class="roll-odds-strip">
+      {{{oddsHTMLStart}}}{{{oddsHTMLStop}}}
+      {{{oddsHTMLStart}}}{{{oddsHTMLStop}}}
+      {{{oddsHTMLStart}}}{{{oddsHTMLStop}}}
+      {{{oddsHTMLStart}}}{{{oddsHTMLStop}}}
+      {{{oddsHTMLStart}}}{{{oddsHTMLStop}}}
       </div>
+      {{#unless isGMReady}}
+      <div class="roll-odds-label-container">Waiting For GM ...</div>{{/unless}}
       {{#if isGMReady}}
       <button class="roll-button" data-action="roll" data-roll-id="{{rollID}}">ROLL</button>
       {{/if}}
