Major work on resistance rolls, added AI

--- a/scss/components/_push-notifications.scss
+++ b/scss/components/_push-notifications.scss
@@ -1,7 +1,7 @@
 & {
   overflow: visible;
 
-  * { --font-primary: "Minion Pro", serif !important }
+  --font-primary: "Minion Pro", serif;
 
   #blades-push-notifications {
     height: auto;
