--- a/templates/roll/partials/roll-collab-resistance.hbs
+++ b/templates/roll/partials/roll-collab-resistance.hbs
@@ -1,60 +1,63 @@
+<section class="sheet-topper roll-type roll-type-{{case " lower" rollType}}">
+  <div class="roll-type-header">{{rollType}} Roll</div>
+</section>
+
+<section class="sheet-header flex-horizontal">
+  <span class="shadowed source-name source-name-type-pc">{{rollPrimary.rollPrimaryName}}</span>
+  <span class="shadowed vs">vs.</span>
+  <div class="consequence-box consequence-strong">
+    <span class="consequence-name">{{consequenceData.name}}</span>
+    <span class="consequence-label">{{consequenceData.label}}</span>
+  </div>
+</section>
+
+
 <div class="split-root flex-horizontal">
+  <div class="roll-sheet-float-block roll-source-bg-img">
+    <img src="{{rollPrimary.rollPrimaryImg}}" />
+  </div>
+  <div class="roll-sheet-float-block roll-source-bg-overlay"> </div>
   <div class="split-root-left">
-    <section class="sheet-top roll-sheet-block">
-      <h1 class="shadowed roll-type">{{rollType}} Roll: <span class="source-name source-type-{{source.type}}">{{rollPrimary.rollPrimaryName}}</span></h1>
-    </section>
-    <section class="sheet-main tab-content nav-group flex-vertical">
+    <section class="sheet-main flex-vertical">
       <div class="roll-sheet-block rolling-block flex-vertical">
         <div class="roll-sheet-sub-block roll-header-block flex-horizontal">
           <label class="filled-label">Rolling:</label>
-          {{#if rollTraitOptions}}
-          <select class="shadowed roll-sheet-select roll-sheet-select-trait" name="flags.eunos-blades.rollCollab.rollTrait">
-            {{#select rollTrait}}
-            {{#each rollTraitOptions}}
-            <option value="{{value}}">{{name}}</option>
-            {{/each}}
-            {{/select}}
-          </select>
-          {{else}}
-          <span class="shadowed roll-readonly">{{rollTraitData.name}}</span>
+          <span
+            class="shadowed roll-readonly {{~#if rollTraitData.pcTooltip}} tooltip-trigger{{/if}}">{{rollTraitData.name}}</span>
+          {{#if rollTraitData.pcTooltip}}
+          <span class="tooltip tooltip-roll-trait tooltip-roll-trait-pc">{{{rollTraitData.pcTooltip}}}</span>
           {{/if}}
           <div class="roll-dotline-block">
-          {{> "systems/eunos-blades/templates/components/dotline.hbs"
-          data=rollTraitData
-          isLocked=true
-          iconFull="dot-full.svg"
-          }}
+            {{> "systems/eunos-blades/templates/components/dotline.hbs"
+            data=rollTraitData
+            isLocked=true
+            iconFull="dot-full.svg"
+            }}
           </div>
         </div>
-        <div class="roll-sheet-sub-block roll-effects-block pos-effects-block flex-horizontal">
-          {{#each posRollMods.roll as |mod_data mod_name|}}
-          {{#unless (test mod_data.isConditional "&&" (test (test mod_data.status "==" "ForcedOff") "||" (test mod_data.status "==" "ToggledOff")))}}
-          {{> "systems/eunos-blades/templates/components/roll-collab-mod.hbs"
-            name=mod_name
-            data=mod_data
-            type="roll"
-            cat="positive" }}
+        <div class="roll-sheet-sub-block roll-effects-block flex-horizontal">
+          {{#each posRollMods.roll }}
+          {{#unless (test isInInactiveBlock "||" (test "!" isVisible))}}
+          {{> "systems/eunos-blades/templates/components/roll-collab-mod.hbs" }}
           {{/unless}}
           {{/each}}
-        </div>
-        <div class="roll-sheet-sub-block roll-effects-block neg-effects-block flex-horizontal">
-          {{#each negRollMods.roll as |mod_data mod_name|}}
-          {{> "systems/eunos-blades/templates/components/roll-collab-mod.hbs"
-            name=mod_name
-            data=mod_data
-            type="roll"
-            cat="negative" }}
+          <span class="roll-mod-block-spacer mid-spacer"></span>
+          {{#each negRollMods.roll }}
+          {{#unless (test isInInactiveBlock "||" (test "!" isVisible))}}
+          {{> "systems/eunos-blades/templates/components/roll-collab-mod.hbs" }}
+          {{/unless}}
           {{/each}}
         </div>
         {{#if hasInactiveConditionals.roll}}
         <div class="roll-sheet-sub-block roll-effects-block inactive-mod-block flex-horizontal">
-          {{#each posRollMods.roll as |mod_data mod_name|}}
-          {{#if (test mod_data.isConditional "&&" (test (test mod_data.status "==" "ForcedOff") "||" (test mod_data.status "==" "ToggledOff")))}}
-          {{> "systems/eunos-blades/templates/components/roll-collab-mod.hbs"
-            name=mod_name
-            data=mod_data
-            type="roll"
-            cat="positive" }}
+          {{#each posRollMods.roll }}
+          {{#if (test isInInactiveBlock "&&" isVisible)}}
+          {{> "systems/eunos-blades/templates/components/roll-collab-mod.hbs" }}
+          {{/if}}
+          {{/each}}
+          {{#each negRollMods.roll }}
+          {{#if (test isInInactiveBlock "&&" isVisible)}}
+          {{> "systems/eunos-blades/templates/components/roll-collab-mod.hbs" }}
           {{/if}}
           {{/each}}
         </div>
@@ -63,203 +66,95 @@
           <span class="dice-total shadowed">{{diceTotal}}</span>
           <span class="d-symbol shadowed">d</span>
         </div>
-
       </div>
-      <div class="roll-sheet-block position-block flex-vertical">
-        <div class="roll-sheet-sub-block roll-header-block flex-horizontal">
-          <label class="filled-label">Position:</label>
-          <span class="roll-readonly">{{rollPositionInitial}}</span>
-        </div>
-        <div class="roll-sheet-sub-block roll-effects-block pos-effects-block flex-horizontal">
-          {{#each posRollMods.position as |mod_data mod_name|}}
-          {{#unless (test mod_data.isConditional "&&" (test (test mod_data.status "==" "ForcedOff") "||" (test mod_data.status "==" "ToggledOff")))}}
-          {{> "systems/eunos-blades/templates/components/roll-collab-mod.hbs"
-            name=mod_name
-            data=mod_data
-            type="position"
-            cat="positive" }}
-          {{/unless}}
-          {{/each}}
-        </div>
-        <div class="roll-sheet-sub-block roll-effects-block neg-effects-block flex-horizontal">
-          {{#each negRollMods.position as |mod_data mod_name|}}
-          {{> "systems/eunos-blades/templates/components/roll-collab-mod.hbs"
-            name=mod_name
-            data=mod_data
-            type="position"
-            cat="negative" }}
-          {{/each}}
-        </div>
-        {{#if hasInactiveConditionals.position}}
-        <div class="roll-sheet-sub-block roll-effects-block inactive-mod-block flex-horizontal">
-          {{#each posRollMods.position as |mod_data mod_name|}}
-          {{#if (test mod_data.isConditional "&&" (test (test mod_data.status "==" "ForcedOff") "||" (test mod_data.status "==" "ToggledOff")))}}
-          {{> "systems/eunos-blades/templates/components/roll-collab-mod.hbs"
-            name=mod_name
-            data=mod_data
-            type="position"
-            cat="positive" }}
-          {{/if}}
-          {{/each}}
-        </div>
-        {{/if}}
-        <div class="roll-sheet-float-block final-block position-final-block position-{{case "lower" rollPositionFinal}}">
-          <span class="shadowed roll-readonly">{{rollPositionFinal}}</span>
-        </div>
-      </div>
-      <div class="roll-sheet-block effect-block flex-vertical">
-        <div class="roll-sheet-sub-block roll-header-block flex-horizontal">
-          <label class="filled-label">Effect:</label>
-          <span class="roll-readonly">{{rollEffectInitial}}</span>
-        </div>
-        <div class="roll-sheet-sub-block roll-effects-block pos-effects-block flex-horizontal">
-          {{#each posRollMods.effect as |mod_data mod_name|}}
-          {{#unless (test mod_data.isConditional "&&" (test (test mod_data.status "==" "ForcedOff") "||" (test mod_data.status "==" "ToggledOff")))}}
-          {{> "systems/eunos-blades/templates/components/roll-collab-mod.hbs"
-            name=mod_name
-            data=mod_data
-            type="effect"
-            cat="positive" }}
-          {{/unless}}
-          {{/each}}
-        </div>
-        <div class="roll-sheet-sub-block roll-effects-block neg-effects-block flex-horizontal">
-          {{#each negRollMods.effect as |mod_data mod_name|}}
-          {{> "systems/eunos-blades/templates/components/roll-collab-mod.hbs"
-            name=mod_name
-            data=mod_data
-            type="effect"
-            cat="negative" }}
-          {{/each}}
-        </div>
-        {{#if hasInactiveConditionals.effect}}
-        <div class="roll-sheet-sub-block roll-effects-block inactive-mod-block flex-horizontal">
-          {{#each posRollMods.effect as |mod_data mod_name|}}
-          {{#if (test mod_data.isConditional "&&" (test (test mod_data.status "==" "ForcedOff") "||" (test mod_data.status "==" "ToggledOff")))}}
-          {{> "systems/eunos-blades/templates/components/roll-collab-mod.hbs"
-            name=mod_name
-            data=mod_data
-            type="effect"
-            cat="positive" }}
-          {{/if}}
-          {{/each}}
-        </div>
-        {{/if}}
-        <div class="roll-sheet-float-block pos-effect-trade-block flex-vertical tooltip-trigger" data-action="trade" data-value="{{rollPosEffectTrade}}">
-          <i class="fa-solid fa-triangle icon-1"></i>
-          <i class="fa-solid fa-triangle icon-2"></i>
-          <i class="fa-solid fa-triangle icon-3"></i>
-          <i class="fa-solid fa-triangle icon-4"></i>
-          <i class="fa-solid fa-triangle icon-5"></i>
-        </div>
-        <div class="tooltip tooltip-small tooltip-left tooltip-pos-effect-trade">
-          <p><strong class="inline-code">Left-Click</strong> to <strong>increase</strong> <strong class='gold-bright'>Position</strong> at the cost of <strong class='red-bright'>Effect</strong>.
-          <br><strong class="inline-code">Right-Click</strong> to <strong>increase</strong> <strong class='gold-bright'>Effect</strong> at the cost of <strong class='red-bright'>Position</strong>.
-          <br>Click again to reset.</p>
-        </div>
-        <div class="roll-sheet-float-block final-block effect-final-block effect-{{case "lower" rollEffectFinal}}">
-          <span class="shadowed roll-readonly">{{rollEffectFinal}}</span>
-        </div>
-      </div>
-      {{#if isAffectingResult}}
-      <div class="roll-sheet-block result-block flex-vertical">
-        <div class="roll-sheet-sub-block roll-header-block  flex-horizontal">
-          <label class="filled-label">Result:</label>
-        </div>
-        <div class="roll-sheet-sub-block roll-effects-block pos-effects-block flex-horizontal">
-          {{#each posRollMods.result as |mod_data mod_name|}}
-          {{#unless (test mod_data.isConditional "&&" (test (test mod_data.status "==" "ForcedOff") "||" (test mod_data.status "==" "ToggledOff")))}}
-          {{> "systems/eunos-blades/templates/components/roll-collab-mod.hbs"
-            name=mod_name
-            data=mod_data
-            type="result"
-            cat="positive" }}
-          {{/unless}}
-          {{/each}}
-        </div>
-        <div class="roll-sheet-sub-block roll-effects-block neg-effects-block flex-horizontal">
-          {{#each negRollMods.result as |mod_data mod_name|}}
-          {{> "systems/eunos-blades/templates/components/roll-collab-mod.hbs"
-            name=mod_name
-            data=mod_data
-            type="result"
-            cat="negative" }}
-          {{/each}}
-        </div>
-        {{#if hasInactiveConditionals.result}}
-        <div class="roll-sheet-sub-block roll-effects-block inactive-mod-block flex-horizontal">
-          {{#each posRollMods.result as |mod_data mod_name|}}
-          {{#if (test mod_data.isConditional "&&" (test (test mod_data.status "==" "ForcedOff") "||" (test mod_data.status "==" "ToggledOff")))}}
-          {{> "systems/eunos-blades/templates/components/roll-collab-mod.hbs"
-            name=mod_name
-            data=mod_data
-            type="result"
-            cat="positive" }}
-          {{/if}}
-          {{/each}}
-        </div>
-        {{/if}}
-        <div class="roll-sheet-float-block final-block result-final-block result-{{#if (test rollResultFinal "<" 0)}}negative{{/if}}{{~#if (test rollResultFinal "==" 0)}}neutral{{/if}}{{~#if (test rollResultFinal ">" 0)}}positive{{/if}}">
-          <span class="shadowed roll-readonly">{{signNum rollResultFinal}} Result Level</span>
-        </div>
-      </div>
-      {{/if}}
     </section>
   </div>
+  <div class="roll-sheet-float-block roll-opp-bg-overlay"> </div>
   <div class="split-root-right">
-    <section class="sheet-top">
-      <div class="roll-sheet-block factors-block flex-vertical">
-        {{#each rollFactorData}}
-        <div class="roll-factor flex-horizontal">
-          <label class="shadowed roll-factor-label">{{name}}</label>
-          <span class="shadowed roll-factor-value {{cssClasses}}">{{value}}</span>
+    <section class="sheet-main flex-vertical">
+      <div class="roll-sheet-block consequence-block flex-vertical">
+
+        <svg width="30" height="30" style="display: block; margin: auto;">
+          <defs>
+            <linearGradient id="gradient-fill" x1="0%" y1="0%" x2="0%" y2="100%">
+              <stop offset="0%" style="stop-color: var(--blades-black);" />
+              <stop offset="100%" style="stop-color: var(--blades-white);" />
+            </linearGradient>
+            <linearGradient id="gradient-stroke" x1="0%" y1="0%" x2="100%" y2="100%">
+              <stop offset="0%" style="stop-color: var(--blades-white-bright);" />
+              <stop offset="100%" style="stop-color: var(--blades-grey);" />
+            </linearGradient>
+          </defs>
+          <polygon points="0,0 30,0 15,30" fill="url(#gradient-fill)" stroke="url(#gradient-stroke)" stroke-width="1" />
+        </svg>
+        {{#if consequenceData.resistedConsequence}}
+        <div class="consequence-box consequence-resisted">
+          <span class="consequence-name">{{consequenceData.resistedConsequence.name}}</span>
+          <span class="consequence-label">{{consequenceData.resistedConsequence.label}}</span>
         </div>
-        {{/each}}
-        <label class="shadowed roll-factor-vs">vs.</label>
+        {{else}}
+        <div class="consequence-box consequence-white">
+          <span class="consequence-name">Fully Resisted</span>
+        </div>
+        {{/if}}
       </div>
     </section>
-    <section class="sheet-main tab-content nav-group flex-vertical">
-      <div class="roll-opp-block">
-        <div class="roll-opp-num-container" style="--spread-count: 7; --spread-size: 30px;">
-          <div class="roll-op-num-spread">
-            <div>0</div>
-            <div>1</div>
-            <div>2</div>
-            <div class="origin-box">3</div>
-            <div>4</div>
-            <div data-active="true">5</div>
-            <div>6</div>
-          </div>
-          <div class="roll-op-num-spread">
-            <div>0</div>
-            <div data-active="true">1</div>
-            <div>2</div>
-            <div class="origin-box">3</div>
-            <div>4</div>
-            <div>5</div>
-            <div>6</div>
-          </div>
-        </div>
-      </div>
-      {{#if rollOpposition}}
-      {{> "systems/eunos-blades/templates/components/roll-collab-opposition.hbs" rollOpposition}}
-      {{/if}}
-    </section>
+
   </div>
 </div>
+
 <section class="sheet-footer">
-  <div class="roll-sheet-float-block roll-button">
-    <div class="roll-odds-strip" style="background: {{{oddsGradient}}};">
-      {{#unless isGMReady}}Waiting For GM ...{{/unless}}
+  <div class="roll-sheet-block">
+    {{#if isAffectingAfter}}
+    <div class="roll-sheet-float-block roll-sheet-sub-block roll-effects-block flex-horizontal">
+      {{#each posRollMods.after }}
+      {{#unless (test isInInactiveBlock "||" (test "!" isVisible))}}
+      {{> "systems/eunos-blades/templates/components/roll-collab-mod.hbs" }}
+      {{/unless}}
+      {{/each}}
+      <span class="roll-mod-block-spacer mid-spacer"></span>
+      {{#each negRollMods.after }}
+      {{#unless (test isInInactiveBlock "||" (test "!" isVisible))}}
+      {{> "systems/eunos-blades/templates/components/roll-collab-mod.hbs" }}
+      {{/unless}}
+      {{/each}}
     </div>
-    {{#if isGMReady}}
+    {{#if hasInactiveConditionals.after}}
+    <div class="roll-sheet-sub-block roll-effects-block inactive-mod-block flex-horizontal">
+      {{#each posRollMods.after }}
+      {{#if (test isInInactiveBlock "&&" isVisible)}}
+      {{> "systems/eunos-blades/templates/components/roll-collab-mod.hbs" }}
+      {{/if}}
+      {{/each}}
+      {{#each negRollMods.after }}
+      {{#if (test isInInactiveBlock "&&" isVisible)}}
+      {{> "systems/eunos-blades/templates/components/roll-collab-mod.hbs" }}
+      {{/if}}
+      {{/each}}
+    </div>
+    {{/if}}
+    {{/if}}
+  </div>
+  <div class="roll-sheet-float-block roll-button">
+    <div class="roll-odds-strip">
+      {{{oddsHTMLStart}}}{{{oddsHTMLStop}}}
+      {{{oddsHTMLStart}}}{{{oddsHTMLStop}}}
+      {{{oddsHTMLStart}}}{{{oddsHTMLStop}}}
+      {{{oddsHTMLStart}}}{{{oddsHTMLStop}}}
+      {{{oddsHTMLStart}}}{{{oddsHTMLStop}}}
+    </div>
+    {{#if (test rollPhase "==" "Collaboration")}}
+    <div class="roll-odds-label-container">
+      <div class="roll-odds-label-text">Waiting For GM ...</div>
+    </div>
+    {{else if (test rollPhase "==" "AwaitingResult")}}
     <button class="roll-button" data-action="roll" data-roll-id="{{rollID}}">ROLL</button>
     {{/if}}
   </div>
-  {{#if stressData}}
+  {{#if costData}}
   <div class="roll-sheet-float-block roll-stress-block {{~#if isGMReady}} gm-ready{{/if}} tooltip-trigger">
-    <span class="shadowed roll-stress-cost">(Roll Costs {{stressData.cost}} Stress)</span>
-    <span class="tooltip tooltip-roll-stress">{{{stressData.tooltip}}}</span>
+    <span class="shadowed roll-stress-cost">{{{costData.footerLabel}}}</span>
+    <span class="tooltip tooltip-roll-stress">{{{costData.tooltip}}}</span>
   </div>
   {{/if}}
 </section>
