--- a/templates/roll/partials/roll-collab-gm-select-doc.hbs
+++ b/templates/roll/partials/roll-collab-gm-select-doc.hbs
@@ -1,12 +1,13 @@
-<div class="roll-doc-select-container {{~#if tooltip}} tooltip-trigger{{/if}}">
+<div class="roll-select-container {{~#if tooltip}} tooltip-trigger{{/if}}">
   {{#if label}}
-  <label class="doc-select-label">{{label}}</label>
+  <label class="select-label">{{label}}</label>
   {{/if}}
-  <div class="roll-doc-select">
-    <select class="shadowed roll-sheet-select roll-sheet-doc-select tooltip-trigger" data-roll-section="{{category}}" data-roll-sub-section="{{name}}">
-      {{#select (lookup (lookup docSelections category) name)}}
+  <div class="roll-select">
+    <select class="shadowed roll-sheet-select roll-sheet-select-doc tooltip-trigger"
+      data-action="gm-select" data-target-flag="{{targetFlag}}">
+      {{#select (lookup (lookup docSelections section) name)}}
       <option value="false">(Select)</option>
-      {{#each docs}}
+      {{#each options}}
       <option value="{{id}}">{{name}}</option>
       {{/each}}
       {{/select}}
