--- a/templates/components/roll-collab-mod.hbs
+++ b/templates/components/roll-collab-mod.hbs
@@ -40,12 +40,24 @@
 
 {{#if isGM}}
   {{#if (test modType "==" "teamwork")}}
-    {{> "systems/eunos-blades/templates/roll/partials/roll-collab-gm-select-doc.hbs"
-      options = teamworkDocs
-      targetFlag = (concat "rollCollab.rollParticipantData." section "." name
-      selected = name
-      docCategory = section
-      docTarget = name }}
+    <div class="roll-select-container {{~#if tooltip}} tooltip-trigger{{/if}}">
+      {{#if label}}
+      <label class="select-label">{{label}}</label>
+      {{/if}}
+      {{log "THIS" this}}
+      {{log "Select Options" selectOptions}}
+      <div class="roll-select" option-test="{{rollInstance.rollCosts}}">
+        {{> "systems/eunos-blades/templates/components/select.hbs"
+        cssClass="shadowed roll-sheet-select roll-sheet-select-doc"
+        dataAction="gm-select"
+        dataFlagTarget=(concat "rollCollab.rollParticipantData." section "." name)
+        dataDType="String"
+        dataDocType=(concat "BladesRollParticipant." section "." name)
+        selected=selectedParticipant
+        options=selectOptions
+        }}
+      </div>
+    </div>
   {{/if}}
   </span>
   {{> "systems/eunos-blades/templates/components/slide-out-controls.hbs"}}
@@ -53,10 +65,7 @@
   </span>
 {{/if}}
 
-
-
 {{#if tooltip}}
   <div class="tooltip tooltip-small tooltip-left tooltip-roll-mod">{{{tooltip}}}</div>
 {{/if}}
-
 </span>
