Struggling with Consequences

--- a/scss/core/_globals.scss
+++ b/scss/core/_globals.scss
@@ -133,6 +133,10 @@
 
   .gold-bright { color: var(--blades-gold-bright) !important }
   .red-bright { color: var(--blades-red-bright) !important }
+  .red-dark { color: var(--blades-red-dark) !important}
+  .grey { color: var(--blades-grey) !important }
+  .white { color: var(--blades-white) !important }
+  .white-bright { color: var(--blades-white-bright) !important }
   .cyan-bright { color: var(--blades-cyan-bright) !important }
   .uppercase { text-transform: uppercase !important }
   .inline-code {
