--- a/templates/components/roll-collab-mod.hbs
+++ b/templates/components/roll-collab-mod.hbs
@@ -46,7 +46,7 @@
       {{/if}}
       {{log "THIS" this}}
       {{log "Select Options" selectOptions}}
-      <div class="roll-select" option-test="{{rollInstance.rollCosts}}">
+      <div class="roll-select">
         {{> "systems/eunos-blades/templates/components/select.hbs"
         cssClass="shadowed roll-sheet-select roll-sheet-select-doc"
         dataAction="gm-select"
