--- a/templates/roll/partials/roll-collab-action-gm.hbs
+++ b/templates/roll/partials/roll-collab-action-gm.hbs
@@ -235,17 +235,102 @@
       {{> "systems/eunos-blades/templates/components/roll-collab-opposition.hbs" rollOpposition=rollOpposition factorData=rollFactors.opposition}}
     </section>
     <section class="sheet-main tab-content roll-consequences">
+      <label class="roll-consequence-section-label">Consequence(s): Partial</label>
+      {{#each consequenceData.partial as |cData cIndex|}}
+        <div class="roll-consequence-row">
+          {{!-- Type --}}
+          {{> "systems/eunos-blades/templates/components/select.hbs"
+            cssClass="roll-consequence-type-select"
+            dataAction="gm-select"
+            dataFlagTarget=(concat "rollCollab.consequenceData.partial." cIndex ".type")
+            dataDType="String"
+            dataDocType=false
+            selected=cData.type
+            options=consequenceTypeOptions.partial }}
+          {{!-- Name --}}
+          <input class="shadowed consequence-name" type="text" data-action="gm-text-input" data-flag-target="rollCollab.consequenceData.partial.{{cIndex}}.name" value="{{cData.name}}" />
+          {{!-- AI Options --}}
+          <div class="flex-vertical consequence-resist-options-container">
+            {{#each cData.resistOptions as |rData rName|}}
+              <div class="flex-horizontal consequence-resist-option">
+                {{> "systems/eunos-blades/templates/components/toggle-icon.hbs"
+                  isToggled=rData.isSelected
+                  activeClass="fa-solid fa-bandage red-bright"
+                  activeTooltip="<b>AI Suggestion</b><br>Click to Select"
+                  inactiveClass="fa-solid fa-bandage grey"
+                  inactiveTooltip="<b>Selected AI Suggestion</b><br>Click to Deselect"
+                  targetFlagKey="rollCollab.consequenceData.partial.{{cIndex}}.resistOptions.{{rName}}.isSelected"
+                }}
+                <label class="consequence-name">{{rData.name}}</label>
+              </div>
+            {{/each}}
+          </div>
+        </div>
+      {{/each}}
+      {{!-- Blank Entry for New Consequence --}}
+      {{#with (count consequenceData.partial) as |index|}}
       <div class="roll-consequence-row">
-        <select class="roll-consequence-type" data-dtype="String" name="consequenceData.type">
-          {{#select consequenceData.type}}
-          <option value="" hidden disabled selected></option>
-          {{#each consequenceTypes}}
-          <option value="{{this}}">{{this}}</option>
-          {{/each}}
-          {{/select}}
-        </select>
+        {{!-- Type --}}
+        {{> "systems/eunos-blades/templates/components/select.hbs"
+          cssClass="roll-consequence-type-select"
+          dataAction="gm-select"
+          dataFlagTarget=(concat "rollCollab.consequenceData.partial." index ".type")
+          dataDType="String"
+          dataDocType=false
+          selected=""
+          options=./consequenceTypeOptions.partial }}
+        {{!-- Name --}}
+        <input class="shadowed consequence-name" type="text" data-action="gm-text-input" data-flag-target="rollCollab.consequenceData.partial.{{index}}.name" />
       </div>
-      <input type="text"
+      {{/with}}
+      <label class="roll-consequence-section-label">Consequence(s): Fail</label>
+      {{#each consequenceData.fail as |cData cIndex|}}
+        <div class="roll-consequence-row">
+          {{!-- Type --}}
+          {{> "systems/eunos-blades/templates/components/select.hbs"
+            cssClass="roll-consequence-type-select"
+            dataAction="gm-select"
+            dataFlagTarget=(concat "rollCollab.consequenceData.fail." cIndex ".type")
+            dataDType="String"
+            dataDocType=false
+            selected=cData.type
+            options=consequenceTypeOptions.fail }}
+          {{!-- Name --}}
+          <input class="shadowed consequence-name" type="text" data-action="gm-text-input" data-flag-target="rollCollab.consequenceData.fail.{{cIndex}}.name" value="{{cData.name}}" />
+          {{!-- AI Options --}}
+          <div class="flex-vertical consequence-resist-options-container">
+            {{#each cData.resistOptions as |rData rName|}}
+              <div class="flex-horizontal consequence-resist-option">
+                {{> "systems/eunos-blades/templates/components/toggle-icon.hbs"
+                  isToggled=rData.isSelected
+                  activeClass="fa-solid fa-bandage red-bright"
+                  activeTooltip="<b>AI Suggestion</b><br>Click to Select"
+                  inactiveClass="fa-solid fa-bandage grey"
+                  inactiveTooltip="<b>Selected AI Suggestion</b><br>Click to Deselect"
+                  targetFlagKey=(concat "rollCollab.consequenceData.fail." cIndex ".resistOptions." rName ".isSelected")
+                }}
+                <label class="consequence-name">{{rData.name}}</label>
+              </div>
+            {{/each}}
+          </div>
+        </div>
+      {{/each}}
+      {{!-- Blank Entry for New Consequence --}}
+      {{#with (count consequenceData.fail) as |index|}}
+        <div class="roll-consequence-row">
+          {{!-- Type --}}
+          {{> "systems/eunos-blades/templates/components/select.hbs"
+            cssClass="roll-consequence-type-select"
+            dataAction="gm-select"
+            dataFlagTarget=(concat "rollCollab.consequenceData.fail." index ".type")
+            dataDType="String"
+            dataDocType=false
+            selected=""
+            options=./consequenceTypeOptions.fail }}
+          {{!-- Name --}}
+          <input class="shadowed consequence-name" type="text" data-action="gm-text-input" data-flag-target="rollCollab.consequenceData.fail.{{index}}.name" />
+        </div>
+      {{/with}}
     </section>
     <section class="sheet-main flex-vertical factor-controls">
 
