Return after awhile away, getting Consequences to work!

--- a/scss/emu-styles.scss
+++ b/scss/emu-styles.scss
@@ -1243,7 +1243,7 @@ body {
 				margin: 0;
 				position: relative;
 				&.offset {
-					margin-inline-start: calc(var(--blades-spacer-sidebar)/ - 4);
+					margin-inline-start: calc(var(--blades-spacer-sidebar) * -0.25);
 				}
 			}
 			#ui-bottom {
