--- a/scss/core/_functions.scss
+++ b/scss/core/_functions.scss
@@ -4,7 +4,7 @@ $remPerPixel: 0.0625rem;
 
 @function toRem($pixelSize) {
   @if not unitless($pixelSize) {
-    $pixelSize: $pixelSize / 1px;
+    $pixelSize: math.div($pixelSize, 1px);
   }
   @return $pixelSize * $remPerPixel;
 }
@@ -22,8 +22,8 @@ $remPerPixel: 0.0625rem;
 
   // Calculate yiq values
   $y: $target-y;
-  $i: ((0.596 * $r) + (-0.275 * $g) + (-0.321 * $b)) / 255;
-  $q: ((0.212 * $r) + (-0.523 * $g) + ( 0.311 * $b)) / 255;
+  $i: math.div((0.596 * $r) + (-0.275 * $g) + (-0.321 * $b), 255);
+  $q: math.div((0.212 * $r) + (-0.523 * $g) + ( 0.311 * $b), 255);
 
   // Convert back to RGB with new target yiq
   $r: ($y + ( 0.956 * $i) + ( 0.621 * $q)) * 255;
